finish detail design

--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -72,16 +72,16 @@
             android:layout_weight="1"/>
         <Button
             android:id="@+id/btnprev"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="이전"
+            android:foreground="@drawable/icon_button_prev"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginRight="5dp"
             />
         <Button
             android:id="@+id/btnnext"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:text="다음"/>
+            android:foreground="@drawable/icon_button_next"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
