--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:scaleType="centerCrop"
         app:srcCompat="@drawable/splashscreen"
         tools:layout_editor_absoluteX="147dp"
         tools:layout_editor_absoluteY="152dp" />
