--- a/app/src/main/res/layout/cartitem_layout.xml
+++ b/app/src/main/res/layout/cartitem_layout.xml
@@ -2,20 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    android:background="@drawable/round_button"
+    android:elevation="10dp"
+    android:layout_marginBottom="10dp"
+    android:padding="10dp"
     android:orientation="horizontal">
     <CheckBox
+        android:layout_gravity="center_vertical"
         android:id="@+id/itemchk"
         android:layout_width="30dp"
         android:scaleX="1.2"
         android:scaleY="1.2"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-/>
+        android:textSize="24sp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="100dp"
-        android:layout_height="100dp">
+        android:layout_height="100dp"
+        android:layout_marginLeft="10dp">
         <ImageView
             android:id="@+id/item_image"
             android:layout_width="0dp"
@@ -28,90 +33,98 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:scaleType="centerCrop"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="10dp"
         android:layout_height="100dp"
         android:orientation="vertical">
-        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
-                android:id="@+id/item_brand"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:text="브랜드"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/item_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/item_brand"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:maxLength="20"
-                android:maxLines="1"
-                android:text="상품명"
-                android:textSize="18sp" />
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/item_brand"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:text="브랜드"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/item_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/item_brand"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:maxLength="20"
+                    android:text="상품명"
+                    android:textSize="18sp" />
+            </LinearLayout>
             <Button
                 android:id="@+id/showaiimg"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:text="AI"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:foreground="@drawable/icon_button_ai"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            >
-
-            <Button
-                android:id="@+id/decrease"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
-            <TextView
+            android:layout_marginTop="10dp">
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/Txtcount"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:text="1"
-                android:textSize="18sp"
-                android:textAlignment="center"
-                app:layout_constraintLeft_toRightOf="@id/decrease"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
-            <Button
-                android:id="@+id/increase"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="5dp"
-                app:layout_constraintLeft_toRightOf="@id/Txtcount"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/decrease"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="7dp"
+                    android:foreground="@drawable/icon_button_minus"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Txtcount"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:text="1"
+                    android:textSize="18sp"
+                    />
+                <Button
+                    android:id="@+id/increase"
+                    android:layout_marginTop="7dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:foreground="@drawable/icon_button_plus"
+                    />
+            </LinearLayout>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
             <TextView
                 android:id="@+id/item_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="188,000원"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:textSize="24sp" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:textSize="18sp" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
