--- a/app/src/main/res/layout/fragment_four.xml
+++ b/app/src/main/res/layout/fragment_four.xml
@@ -3,118 +3,130 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/labelcart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cart"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-    <CheckBox
-        android:id="@+id/itemchk"
-        android:layout_width="30dp"
-        android:scaleX="1.5"
-        android:scaleY="1.5"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/labelcart"
-        />
-    <TextView
-        android:id="@+id/Txttotalselected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="전체 2개"
-        android:layout_marginTop="5dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/itemchk"
-        app:layout_constraintTop_toBottomOf="@id/labelcart" />
-    <Button
-        android:id="@+id/btn_delete"
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="선택 삭제"
-        app:layout_constraintTop_toBottomOf="@id/labelcart"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/cartview"
-                android:layout_width="match_parent"
-                android:layout_height="450dp"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/itemchk"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                />
-    <TextView
-        android:id="@+id/labelItemtoPay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="결제할 상품"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cartview"
-        />
-
-    <TextView
-        android:id="@+id/Txttotalcount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="총 2개"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/labelItemtoPay"
-        app:layout_constraintBottom_toBottomOf="@id/labelItemtoPay" />
-    <TextView
-        android:id="@+id/lbltotal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="결제 금액"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@id/labelItemtoPay"
-        app:layout_constraintLeft_toLeftOf="parent" />
-    <TextView
-        android:id="@+id/txttotal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="199999 원"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@id/labelItemtoPay"
-        app:layout_constraintRight_toRightOf="parent" />
-    <Button
-        android:id="@+id/btn_pay"
-        android:gravity="center"
-        android:textSize="20sp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="20dp"
-        android:layout_height="wrap_content"
-        android:text="199999원 결제하기"
-        app:layout_constraintTop_toBottomOf="@id/lbltotal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp">
+        <TextView
+            android:id="@+id/labelHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cart"
+            android:fontFamily="@font/helvetica_bold"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:layout_marginTop="20dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <CheckBox
+                android:id="@+id/itemchk"
+                android:layout_width="30dp"
+                android:scaleX="1.5"
+                android:scaleY="1.5"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/Txttotalselected"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="전체 2개"
+                android:layout_marginTop="5dp"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+            <Button
+                android:id="@+id/btn_delete"
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="선택 삭제"
+                />
+        </LinearLayout>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cartview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/labelItemtoPay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="결제할 상품"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:id="@+id/Txttotalcount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="총 2개"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/lbltotal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="결제 금액"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/txttotal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="199999 원"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_pay"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
+            android:text="199999원 결제하기"
+            app:layout_constraintTop_toBottomOf="@id/lbltotal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+    </LinearLayout>
     <ImageView
         android:id="@+id/aiimageView"
         android:layout_width="300dp"
@@ -126,8 +138,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
-
     <ProgressBar
+        android:visibility="gone"
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="100dp"
@@ -138,6 +150,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
