--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -311,6 +311,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:textSize="16sp"
+                        android:layout_marginLeft="20dp"
                         android:text="1"/>
                     <Button
                         android:id="@+id/plus_button"
